# clp

./: .gitignore  README.md  pyproject.toml
src/clp/: main.py
tests/: test_osc52.py
